Finaliza frontend do gerador de senhas